<resources>
    <!-- Login Activity -->
    <string name="app_name">Carbon Bank</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="text_create_acc">Don\'t have an account? Create One</string>

    <!-- Register Activity -->
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_email">E-mail</string>
    <string name="for_company">For Company Register</string>
    <string name="btn_sign_up">Sign Up</string>

    <!-- For Company Register Activity -->
    <string name="btn_company_sign_up">Sign up For Company</string>
    <string name="text_owner_username">Owner by (Registered Username)</string>
    <string name="text_company_reg_no">Company Registration Number</string>
    <string name="text_company_name">Company Name</string>
    <string name="text_company_pw">Company Password</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Drawer Menu Item Name -->
    <string name="home">Home</string>
    <string name="carboncredit">Carbon Credit</string>
    <string name="carbontax">Carbon Tax</string>
    <string name="reward">Reward</string>
    <string name="scanqr">Scan QR Code</string>
    <string name="myqr">My QR Code</string>
    <string name="nfc">NFC</string>
    <string name="setting">Settings</string>
    <string name="signout">Sign Out</string>

    <string name="qr_code_message">Scan to earn Carbon Credit</string>
    <string name="qr_code_title">QR Scanner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tooltip_scanner">Start QR Scanner To Earn Carbon Credit</string>

    <string name="ScannerQRCodeMsg">Focus On QR Code To Earn Carbon Credit</string>

    <string name="editProfileTitle">Personal Detail</string>
    <string name="editProfileDescription">Press Blue Label Button To Start Editing.</string>

    <string name="text_displayName">Display Name</string>
    <string name="choice_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Others</string>
    <string name="dob">Date of Birth</string>
    <string name="phoneNo">Phone Number</string>
    <string name="saveProfile">Save Profile</string>
    <string name="editProfileText">Edit Profile</string>

    <string name="securityText">Security</string>
    <string name="themeText">Theme</string>
    <string name="companyText">Manage Company</string>

    <string name="nfcDesc">Place your back of your device against the NFC card reader.</string>


    <string name="cc_description">Current Balance \n\n View details for transaction history</string>
    <string name="ct_descriptoin">Current Payable Taxes \n\n\n Pay How Much You Used \n Save the Environment Together</string>
    <string name="title_activity_carbon_credit">CarbonCreditActivity</string>

    <string name="no_record">No Record</string>
    <string name="Date">Date</string>
    <string name="Description">Description</string>
    <string name="Transaction">Transaction</string>


    <string name="rewardDetailTitle">Reward Detail</string>
    <string name="redeemButton">Redeem Reward</string>

</resources>
