<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EditProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="496dp"
        android:background="@drawable/edit_profile_header"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDisplayName"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/all_edit_field_bg"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/text_displayName"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glFromPic" />

        <EditText
            android:id="@+id/etDisplayName"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/all_edit_text_field_bg"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDisplayName"
            app:layout_constraintTop_toTopOf="@+id/glFromPic" />


        <TextView
            android:id="@+id/tvGender"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/all_edit_field_bg"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/choice_gender"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDisplayName" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/all_edit_text_field_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvGender"
            app:layout_constraintTop_toBottomOf="@+id/etDisplayName">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/male"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/female"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/other"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvDob"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/all_edit_field_bg"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/dob"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvShowDoB"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/all_edit_text_field_bg"
            android:fontFamily="@font/open_sans"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/dob"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDob"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

        <TextView
            android:id="@+id/tvPhoneNo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/all_edit_field_bg"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/phoneNo"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDob" />

        <EditText
            android:id="@+id/etPhoneNo"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/all_edit_text_field_bg"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvDisplayName"
            app:layout_constraintTop_toBottomOf="@+id/tvShowDoB" />

        <android.support.constraint.Guideline
            android:id="@+id/glFromPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="67dp" />

        <Button
            android:id="@+id/saveProfileBtn"
            android:layout_width="380dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/signin_btn_bg"
            android:fontFamily="@font/open_sans"
            android:text="@string/saveProfile"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="saveProfileInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvErrorMsg" />

        <TextView
            android:id="@+id/tvErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text=""
            android:textSize="15sp"
            android:fontFamily="@font/open_sans"
            android:textStyle="bold"
            android:textColor="@color/colorErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNo" />


    </android.support.constraint.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/testimg"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_overlay="true"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>