<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@+id/text_input_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/edit_profile_pic">
    </de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/signin_btn_bg"
        android:onClick="permitCreateAcc"
        android:text="@string/btn_sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Username field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textfield_bg"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintBottom_toTopOf="@+id/text_input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans"
            android:hint="@string/text_username"
            android:inputType="text">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <!-- Password Field -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textfield_bg"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintBottom_toTopOf="@+id/text_input_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans"
            android:hint="@string/text_password"
            android:inputType="textPassword"></android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <!-- Confirm Password Field -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_confirm_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textfield_bg"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintBottom_toTopOf="@+id/text_input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans"
            android:hint="@string/text_confirm_password"
            android:inputType="textPassword"></android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <!--Email Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textfield_bg"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>